--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -342,8 +342,6 @@
   -webkit-box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.1);
           box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.1);
   margin-bottom: 2rem;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
 }
 
 @media (min-width: 786px) {
@@ -437,23 +435,41 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 10px;
   width: 100%;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
 
+@media (min-width: 786px) {
+  .taskList__addTaskSection {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+}
+
 .taskList__taskInput {
-  width: 100%;
   border: 1px solid black;
   border-radius: 5px;
-  margin-right: 0.5rem;
   padding: 10px;
   outline: none;
 }
 
+@media (min-width: 786px) {
+  .taskList__taskInput {
+    width: 100%;
+  }
+}
+
 .taskList__add {
-  margin-top: 0;
+  margin: 0;
   padding: 15px 25px;
 }
 
