--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -103,8 +103,8 @@ $desktop: 1200px;
     }
 
     &__image {
-        width: 400px;
-        height: 300px;
+        width: 360px;
+        height: 270px;
         margin: 4rem auto 0 auto;
         display: block;
 
@@ -135,7 +135,6 @@ $desktop: 1200px;
 /* ---------------------------- Home Header ---------------------------- */
 
 .homeHeader {
-    width: 100vw;
     height: 6rem;
     box-sizing: border-box;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.1);
@@ -183,7 +182,7 @@ $desktop: 1200px;
         width: inherit;
 
         @include tablet {
-            display: flex;
+            display: flex !important;
             width: auto;
         }
     }
@@ -193,7 +192,7 @@ $desktop: 1200px;
         font-size: clamp(1rem, 3vw, 1.2rem);
         padding: 0.75rem 2rem;
         text-transform: uppercase;
-        width: inherit;
+        width: 100vw;
         text-align: start;
         border: none;
         background-color: $bgColor;
@@ -214,6 +213,7 @@ $desktop: 1200px;
             border: none;
             font-weight: 800;
             background-color: transparent;
+            width: fit-content;
         }
     }
 }
@@ -505,11 +505,6 @@ $desktop: 1200px;
         padding: 15px;
         border-radius: 5px;
         display: flex;
-
-        &--edit {
-            background-color: #A6DDA4 !important;
-            outline: none;
-        }
     }
 
     &__fallback {
@@ -520,6 +515,12 @@ $desktop: 1200px;
         margin: auto 15px;
         flex: 0.8;
         padding: 10px;
+        outline: none;
+
+        &:focus {
+            background-color: white;
+            border-radius: 5px;
+        }
     }
 
     &__checkbox {
@@ -530,7 +531,7 @@ $desktop: 1200px;
 
     &__edit, &__save, &__delete {
         flex: 0.1;
-        margin: auto 0;
+        margin: auto 0.25rem;
         cursor: pointer;
     }
 
